study databinding: resource string format

--- a/databinding/src/main/res/values/strings.xml
+++ b/databinding/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">DataBinding</string>
+    <string name="name_format">My name is %1$s %2$s</string>
 </resources>
