study databinding： Observable objects

--- a/databinding/src/main/res/values/strings.xml
+++ b/databinding/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">DataBinding</string>
-    <string name="name_format">My name is %1$s %2$s</string>
+    <string name="name_format">Hello %1$s %2$s !</string>
 </resources>
